--- a/app/src/main/res/layout/cardview_titlesubtitlemediaoneicoactionbtn.xml
+++ b/app/src/main/res/layout/cardview_titlesubtitlemediaoneicoactionbtn.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-     android:layout_height="wrap_content"
-    android:cardElevation="4dp"
-    android:cardUseCompatPadding="true"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    card_view:cardElevation="4dp"
+    card_view:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,17 +14,17 @@
 
         <include
             android:id="@+id/lo_titlesubtitlerectangle48_incardview__cardview_titlesubtitlemediaoneicoactionbtn"
-            layout="@layout/lo_titlesubtitlerectangle48_incardview"/>
+            layout="@layout/lo_titlesubtitlerectangle48_incardview" />
 
         <TextView
             android:id="@+id/tvContent__cardview_titlesubtitlemediaoneicoactionbtn"
             style="@style/TextView.InCardView.Content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
         <include
             android:id="@+id/lo_oneicoactionbutton__cardview_titlesubtitlemediaoneicoactionbtn"
-            layout="@layout/lo_oneicoactionbutton"/>
+            layout="@layout/lo_oneicoactionbutton" />
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
