--- a/app/src/main/res/layout/cardview_titlesubtitlemediatwoactionbtn.xml
+++ b/app/src/main/res/layout/cardview_titlesubtitlemediatwoactionbtn.xml
@@ -5,8 +5,8 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:cardElevation="4dp"
-    android:cardUseCompatPadding="true"
+    card_view:cardElevation="4dp"
+    card_view:cardUseCompatPadding="true"
     android:orientation="vertical">
 
     <LinearLayout
