--- a/app/src/main/res/layout/activity_people_content.xml
+++ b/app/src/main/res/layout/activity_people_content.xml
@@ -10,32 +10,32 @@
     tools:showIn="@layout/activity_main_appbarcontent">
 
 
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_gravity="top"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/primary"
-        app:tabIndicatorColor="@color/white"
-        app:tabMode="fixed"
-        >
+        android:layout_height="wrap_content">
 
-        <android.support.design.widget.TabItem
+        <com.jackleeentertainment.oq.ui.widget.TextViewToggleJack
+            android:id="@+id/tvTab0"
+            android:textSize="13dip"
+            android:gravity="center"
             android:text="@string/contacts"
-        android:layout_height="@dimen/md_48dip"
-        android:layout_width="wrap_content"
-        android:icon="@drawable/ic_check_white_48dp"/>
+            android:layout_weight="1"
+            android:layout_width="0dip"
+            android:layout_height="56dip"/>
 
-
-        <android.support.design.widget.TabItem
+        <com.jackleeentertainment.oq.ui.widget.TextViewToggleJack
+            android:id="@+id/tvTab1"
+            android:textSize="13dip"
+            android:gravity="center"
             android:text="@string/search"
-            android:layout_height="@dimen/md_48dip"
-            android:layout_width="wrap_content"
-            android:icon="@drawable/ic_check_white_48dp"/>
+            android:layout_weight="1"
+            android:layout_width="0dip"
+            android:layout_height="56dip"/>
 
 
-    </android.support.design.widget.TabLayout>
+    </LinearLayout>
+
 
 
 
