--- a/app/src/main/res/layout/frag_firstvisit1_phonenum.xml
+++ b/app/src/main/res/layout/frag_firstvisit1_phonenum.xml
@@ -32,7 +32,7 @@
                 android:textSize="24dip" />
 
             <EditText
-                android:id="@+id/edittext_nationalcode"
+                android:id="@+id/etNCode"
                 android:layout_width="72dip"
                 android:layout_height="48dip"
                 android:background="@drawable/rec_radmd2_str1_primarydark"
@@ -41,7 +41,7 @@
                 android:textSize="24dip" />
 
             <TextView
-                android:id="@+id/textview_countryname"
+                android:id="@+id/tvNName"
                 android:layout_width="0dip"
                 android:layout_height="48dip"
                 android:layout_marginLeft="16dip"
@@ -61,7 +61,7 @@
             android:layout_marginBottom="32dip"
             android:orientation="horizontal">
 
-
+            <!--//Dummy TextView-->
             <TextView
                 android:visibility="invisible"
                 android:layout_width="wrap_content"
@@ -74,7 +74,7 @@
                 android:textSize="24dip" />
 
             <EditText
-                android:id="@+id/edittext_phonenumber"
+                android:id="@+id/etPhoneNum"
                 android:layout_width="match_parent"
                 android:layout_height="48dip"
                 android:background="@drawable/rec_radmd2_str1_primarydark"
@@ -86,7 +86,7 @@
 
 
         <Button
-            android:id="@+id/button_verifycode"
+            android:id="@+id/btDoSms"
             style="@style/Button.TwoButtonForAction.Primary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -151,7 +151,7 @@
             android:textSize="@dimen/md_14sp" />
 
         <TextView
-            android:id="@+id/textview_timer"
+            android:id="@+id/tvTimer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/text_black_54"
