--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,8 +14,51 @@
     tools:context="com.jackleeentertainment.oq.ui.layout.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dip" >
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabLayout"
+            android:layout_gravity="top"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primary"
+            app:tabIndicatorColor="@color/white"
+            app:tabMode="fixed"
+            >
+
+            <android.support.design.widget.TabItem
+                android:layout_height="@dimen/md_48dip"
+                android:layout_width="wrap_content"
+                android:icon="@drawable/ic_check_white_48dp"/>
+
+            <android.support.design.widget.TabItem
+                android:layout_height="@dimen/md_48dip"
+                android:layout_width="wrap_content"
+                android:icon="@drawable/ic_check_white_48dp"/>
+
+            <android.support.design.widget.TabItem
+                android:layout_height="@dimen/md_48dip"
+                android:layout_width="wrap_content"
+                android:icon="@drawable/ic_check_white_48dp"/>
+
+            <!--<android.support.design.widget.TabItem-->
+            <!--android:layout_height="@dimen/md_48dip"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:icon="@drawable/ic_check_white_48dp"/>-->
+
+            <!--<android.support.design.widget.TabItem-->
+            <!--android:layout_height="@dimen/md_48dip"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:icon="@drawable/ic_check_white_48dp"/>-->
+
+        </android.support.design.widget.TabLayout>
+
+
+    </android.support.v4.view.ViewPager>
 </RelativeLayout>
