--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -10,43 +10,12 @@
     tools:showIn="@layout/activity_main_appbarcontent">
 
 
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_gravity="top"
+    <com.jackleeentertainment.oq.ui.widget.SlidingTabLayout
+        android:id="@+id/slidingTabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/primary"
-        app:tabIndicatorColor="@color/white"
-        app:tabMode="fixed"
-        >
-
-        <!--<android.support.design.widget.TabItem-->
-            <!--android:layout_height="@dimen/md_48dip"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:icon="@drawable/ic_check_white_48dp"/>-->
-
-        <!--<android.support.design.widget.TabItem-->
-            <!--android:layout_height="@dimen/md_48dip"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:icon="@drawable/ic_check_white_48dp"/>-->
-
-        <!--<android.support.design.widget.TabItem-->
-            <!--android:layout_height="@dimen/md_48dip"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:icon="@drawable/ic_check_white_48dp"/>-->
-
-        <!--<android.support.design.widget.TabItem-->
-            <!--android:layout_height="@dimen/md_48dip"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:icon="@drawable/ic_check_white_48dp"/>-->
-
-        <!--<android.support.design.widget.TabItem-->
-            <!--android:layout_height="@dimen/md_48dip"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:icon="@drawable/ic_check_white_48dp"/>-->
-
-    </android.support.design.widget.TabLayout>
+        android:elevation="2dp"
+        android:background="@color/colorPrimary"/>
 
 
 
