--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,12 +7,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.jackleeentertainment.oq.ui.layout.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
+
+
+    <com.jackleeentertainment.oq.ui.widget.SlidingTabLayout
+        android:id="@+id/slidingTabLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        android:background="@color/colorPrimary"/>
+
+
 
 
     <android.support.v4.view.ViewPager
@@ -22,43 +29,5 @@
         android:layout_weight="1"
         android:layout_height="0dip" >
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabLayout"
-            android:layout_gravity="top"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/primary"
-            app:tabIndicatorColor="@color/white"
-            app:tabMode="fixed"
-            >
-
-            <android.support.design.widget.TabItem
-                android:layout_height="@dimen/md_48dip"
-                android:layout_width="wrap_content"
-                android:icon="@drawable/ic_check_white_48dp"/>
-
-            <android.support.design.widget.TabItem
-                android:layout_height="@dimen/md_48dip"
-                android:layout_width="wrap_content"
-                android:icon="@drawable/ic_check_white_48dp"/>
-
-            <android.support.design.widget.TabItem
-                android:layout_height="@dimen/md_48dip"
-                android:layout_width="wrap_content"
-                android:icon="@drawable/ic_check_white_48dp"/>
-
-            <!--<android.support.design.widget.TabItem-->
-            <!--android:layout_height="@dimen/md_48dip"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:icon="@drawable/ic_check_white_48dp"/>-->
-
-            <!--<android.support.design.widget.TabItem-->
-            <!--android:layout_height="@dimen/md_48dip"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:icon="@drawable/ic_check_white_48dp"/>-->
-
-        </android.support.design.widget.TabLayout>
-
-
     </android.support.v4.view.ViewPager>
-</RelativeLayout>
+</LinearLayout>
