--- a/app/src/main/res/layout/cardview_cause.xml
+++ b/app/src/main/res/layout/cardview_cause.xml
@@ -8,35 +8,61 @@
     card_view:cardUseCompatPadding="true">
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <ListView
+
+        <LinearLayout
+            android:visibility="gone"
+            android:id="@+id/loLv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include
+                android:id="@+id/tv_title__cardview_cause"
+                layout="@layout/tv_title" />
+
+            <ListView
+                android:id="@+id/lv__cardview_cause"
+                android:layout_margin="16dip"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </ListView>
+
+            //for delete all
+            <include
+                android:id="@+id/lo_lefttext_rightoneaction_borderlesscolored__cardview_cause"
+                layout="@layout/lo_lefttext_rightoneaction_borderlesscolored"/>
+
+        </LinearLayout>
+
+
+
+        <RelativeLayout
+            android:id="@+id/roEmpty__cardview_cause"
+            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        </ListView>
+            <View
+                android:background="@drawable/scrim_solid"
+                android:layout_width="match_parent"
+                android:layout_height="160dip"/>
+
+            <TextView
+                android:id="@+id/tvEmpty__cardview_cause"
+                android:layout_centerInParent="true"
+                android:text="@string/tab_to_add_opposite"
+                android:textSize="@dimen/md_24sp"
+                android:textColor="@color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:background="@color/payPrimary"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <View
-            android:background="@drawable/scrim_solid"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
-        <TextView
-            android:layout_centerInParent="true"
-            android:text="@string/tab_to_add_opposite"
-            android:textSize="@dimen/md_24sp"
-            android:textColor="@color/white"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
