--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.jackleeentertainment.oq.ui.layout.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
-
 
     <com.jackleeentertainment.oq.ui.widget.SlidingTabLayout
         android:id="@+id/slidingTabLayout"
@@ -18,10 +17,6 @@
         android:layout_height="wrap_content"
         android:elevation="2dp"
         android:background="@color/colorPrimary"/>
-
-
-
-
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/viewPager"
@@ -30,4 +25,6 @@
         android:layout_height="0dip" >
 
     </android.support.v4.view.ViewPager>
+
 </LinearLayout>
+
