--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <color name="colorPrimary">@color/green10</color>
     <color name="colorPrimaryDark">@color/green6</color>
     <color name="colorAccent">@color/material_orange700a</color>
+    <color name="colorTabIndicator">@color/cyan10</color>
+
+
 
     <color name="getPrimary">@color/material_cyan500</color>
     <color name="getPrimaryDark">@color/material_cyan800</color>
