--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,12 +11,14 @@
     tools:context="com.jackleeentertainment.oq.ui.layout.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <com.jackleeentertainment.oq.ui.widget.SlidingTabLayout
-        android:id="@+id/slidingTabLayout"
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="2dp"
-        android:background="@color/colorPrimary"/>
+        android:background="@color/material_grey500"
+         />
+
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/viewPager"
