--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">@color/green6</color>
     <color name="colorAccent">@color/material_orange700a</color>
     <color name="colorTabIndicator">@color/cyan10</color>
+    <color name="colorTabTextColor">@color/cyan10</color>
 
 
 
