--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <color name="colorPrimary">@color/green10</color>
-    <color name="colorPrimaryDark">@color/green6</color>
-    <color name="colorAccent">@color/material_orange700a</color>
-    <color name="colorTabIndicator">@color/cyan10</color>
-    <color name="colorTabTextColor">@color/cyan10</color>
+    <color name="colorPrimary">@color/material_cyan500</color>
+    <color name="colorPrimaryDark">@color/material_cyan800</color>
+    <color name="colorAccent">@color/material_yellow400a</color>
+    <color name="colorTabIndicator">@color/colorAccent</color>
+    <color name="colorTabTextColor">@color/colorAccent</color>
+    <color name="colorTabTextColorUnselected">@color/alphawhite_70</color>
 
 
 
