--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -87,6 +87,7 @@
                     >
 
                     <RelativeLayout
+                        android:visibility="gone"
                         android:id="@+id/roFootTab0"
                         android:layout_width="0dip"
                         android:layout_height="match_parent"
