--- a/app/src/main/res/layout/lo_avatar_titlesubtitle_delete.xml
+++ b/app/src/main/res/layout/lo_avatar_titlesubtitle_delete.xml
@@ -22,7 +22,8 @@
             android:id="@+id/tvTitle__lo_avatartitlesubtitle_delete"
             android:gravity="center_vertical|left"
             android:text="Jack"
-            android:textColor="@color/white"
+            android:lines="1"
+            android:textColor="@color/text_black_87"
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"/>
@@ -30,8 +31,9 @@
         <TextView
             android:id="@+id/tvSubTitle__lo_avatartitlesubtitle_delete"
             android:gravity="center_vertical|left"
+            android:lines="1"
             android:text="Cool Alarm"
-            android:textColor="@color/white"
+            android:textColor="@color/text_black_54"
             android:layout_width="match_parent"
             android:layout_height="0dip"
             android:layout_weight="1"/>
@@ -43,9 +45,9 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-        <ImageButton
-            android:id="@+id/ibDelete"
-            style="@style/ImageButton.WhiteImageSrcTransparentBg.24"
+        <ImageView
+            android:id="@+id/ivDelete"
+            style="@style/ImageView.WhiteImageSrcTransparentBg.24"
             android:src="@drawable/ic_delete_white_24dp"
             android:layout_marginLeft="@dimen/md_16dip"
             android:layout_marginRight="@dimen/md_16dip"
