--- a/app/src/main/res/layout/cardview_titlelistaction.xml
+++ b/app/src/main/res/layout/cardview_titlelistaction.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,18 +15,17 @@
 
 
         <LinearLayout
-            android:visibility="gone"
-            android:id="@+id/loLv"
+            android:id="@+id/loMain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <include
-                android:id="@+id/tv_title__cardview_cause"
+                android:id="@+id/tv_title__cardview_titlelistaction"
                 layout="@layout/tv_title" />
 
             <ListView
-                android:id="@+id/lv__cardview_cause"
+                 android:id="@+id/lv__cardview_titlelistaction"
                 android:layout_margin="16dip"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -34,7 +34,7 @@
 
             //for delete all
             <include
-                android:id="@+id/lo_lefttext_rightoneaction_borderlesscolored__cardview_cause"
+                android:id="@+id/lo_lefttext_rightoneaction_borderlesscolored__cardview_titlelistaction"
                 layout="@layout/lo_lefttext_rightoneaction_borderlesscolored"/>
 
         </LinearLayout>
@@ -42,7 +42,8 @@
 
 
         <RelativeLayout
-            android:id="@+id/roEmpty__cardview_cause"
+            android:visibility="gone"
+            android:id="@+id/roEmpty__cardview_titlelistaction"
             android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -53,7 +54,7 @@
                 android:layout_height="160dip"/>
 
             <TextView
-                android:id="@+id/tvEmpty__cardview_cause"
+                android:id="@+id/tvEmpty__cardview_titlelistaction"
                 android:layout_centerInParent="true"
                 android:text="@string/tab_to_add_opposite"
                 android:textSize="@dimen/textSizeOfTabToAdd"
