--- a/app/src/main/res/layout/frag_content_nodividerlist.xml
+++ b/app/src/main/res/layout/frag_content_nodividerlist.xml
@@ -40,20 +40,16 @@
 
 
 
-    <RelativeLayout
-        android:id="@+id/vEmpty"
+
+
+    <include
+        android:id="@+id/ro_empty_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        layout="@layout/ro_empty_list"
+        android:visibility="gone"
+        />
 
-
-        <TextView
-            android:text="empty"
-            android:layout_centerInParent="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-
-    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/vProgress"
