--- a/app/src/main/res/layout/lo_lefttext_rightoneaction_borderlesscolored.xml
+++ b/app/src/main/res/layout/lo_lefttext_rightoneaction_borderlesscolored.xml
@@ -22,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/changeperiod"
+        android:textColor="@color/colorPrimary"
         style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
         />
 
