--- a/app/src/main/res/layout/ro_empty_list.xml
+++ b/app/src/main/res/layout/ro_empty_list.xml
@@ -18,6 +18,7 @@
             android:padding="24dip">
 
             <ImageView
+                android:id="@+id/ivEmpty"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true" />
@@ -39,7 +40,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="16dip"
                 android:text="Create Your First Alarm"
-                android:textColor="@color/black"
+                android:textColor="@color/text_black_87"
                 android:textSize="18dip" />
 
             <TextView
@@ -54,7 +55,7 @@
                 android:layout_marginRight="18dip"
                 android:gravity="center"
                 android:text="You can create your first alarm by clicking buton right left. You can invite friends or publify your alarm by creating Social Alarm "
-                android:textColor="@color/translucent_grey_dark"
+                android:textColor="@color/text_black_54"
                 android:textSize="16dip" />
 
             <TextView
@@ -66,7 +67,7 @@
                 android:layout_marginBottom="16dip"
                 android:gravity="center"
                 android:text="Learn More"
-                android:textColor="@color/primary"
+                android:textColor="@color/colorPrimary"
                 android:textSize="18dip" />
         </RelativeLayout>
 
