--- a/app/src/main/res/menu/drawer_activity_main.xml
+++ b/app/src/main/res/menu/drawer_activity_main.xml
@@ -14,14 +14,14 @@
 
     <item android:title="@string/transaction_i_get">
         <menu>
-            <item
-                android:id="@+id/nav_take_receipt"
-                android:icon="@drawable/ic_photo_camera_black_48dp"
-                android:title="@string/take_receipt"/>
-            <item
-                android:id="@+id/nav_load_receipt"
-                android:icon="@drawable/ic_photo_library_black_48dp"
-                android:title="@string/load_receipt"/>
+            <!--<item-->
+                <!--android:id="@+id/nav_take_receipt"-->
+                <!--android:icon="@drawable/ic_photo_camera_black_48dp"-->
+                <!--android:title="@string/take_receipt"/>-->
+            <!--<item-->
+                <!--android:id="@+id/nav_load_receipt"-->
+                <!--android:icon="@drawable/ic_photo_library_black_48dp"-->
+                <!--android:title="@string/load_receipt"/>-->
             <item
                 android:id="@+id/nav_load_sms"
                 android:icon="@drawable/ic_credit_card_black_48dp"
