--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -204,7 +204,8 @@
 
 
 
-    <style name="EditText">
+    <style name="EditText" parent="Base.Widget.AppCompat.EditText">
+
     </style>
 
     <style name="EditText.VerifyNumItem">
@@ -228,9 +229,22 @@
         <item name="android:layout_margin">16dip</item>
     </style>
 
+    <style name="EditText.Ammount">
+        <item name="android:lines">1</item>
+
+    </style>
+
+    <style name="EditText.Ammount.Main">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">20dip</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">56dip</item>
+    </style>
 
 
-
+    <style name="EditText.Ammount.Sub">
+    </style>
 
 
 
