--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -178,7 +178,7 @@
     <style name="ImageView.WhiteImageSrcTransparentBg.36">
         <item name="android:layout_width">36dip</item>
         <item name="android:layout_height">36dip</item>
-        <item name="android:padding">3dip</item>
+        <item name="android:padding">4dip</item>
     </style>
 
     <style name="ImageView.ToolbarIcon">
@@ -219,11 +219,18 @@
 
     </style>
 
-    <style name="EditText.NewOQItemPhotoContent">
+    <style name="EditText.Comment">
         <item name="android:gravity">left|top</item>
-        <item name="android:background">@drawable/rec_radmd2_str2primarydark_solidalpha</item>
-        <item name="android:textSize">18dip</item>
-        <item name="android:lines">5</item>
+        <item name="android:background">@drawable/et_comment</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/text_black_87</item>
+
+        <item name="android:textSize">18sp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">16dip</item>
@@ -231,6 +238,7 @@
 
     <style name="EditText.Ammount">
         <item name="android:lines">1</item>
+        <item name="android:background">@drawable/et_comment</item>
 
     </style>
 
@@ -242,9 +250,14 @@
         <item name="android:layout_height">56dip</item>
     </style>
 
-
     <style name="EditText.Ammount.Sub">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">16dip</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">40dip</item>
     </style>
+
 
 
 
