--- a/app/src/main/res/layout/frag_newoq_1.xml
+++ b/app/src/main/res/layout/frag_newoq_1.xml
@@ -18,115 +18,160 @@
             card_view:cardElevation="4dp"
             card_view:cardUseCompatPadding="true">
 
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <!--Head Title-->
+                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+                          android:id="@+id/tvPhotoCommentTitle"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:padding="@dimen/md_16dip"
+                          android:text="@string/dummyname"
+                          android:textSize="@dimen/md_24sp"/>
 
-                <RelativeLayout
+                <LinearLayout
+                    android:id="@+id/loBtAddPhoto"
                     android:layout_width="match_parent"
-                    android:layout_height="200dip"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/md_12dip"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/ivBtAddPhoto"
+                        style="@style/ImageView.WhiteImageSrcTransparentBg.36"
+                        android:layout_width="40dip"
+                        android:layout_height="40dip"
+                        android:src="@drawable/ic_add_white_48dp"/>
+
+                    <TextView
+                        android:id="@+id/tvBtAddPhoto"
+                        android:layout_width="0dip"
+                        android:layout_height="56dip"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical|start"
+                        android:text="@string/add_photo"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="16dip"/>
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="200dip"
+                        android:orientation="vertical">
+
+
+                        <ImageView
+                            android:id="@+id/ivPhotoMain"
+                            android:layout_width="match_parent"
+                            android:layout_height="200dip"/>
+
+
+                        <TextView
+                            android:id="@+id/tvPhotoMainEmpty"
+                            android:layout_width="match_parent"
+                            android:layout_height="200dip"
+                            android:text="@string/tab_to_add_opposite"/>
+
+                        <RelativeLayout
+                            android:layout_width="80dip"
+                            android:layout_height="80dip"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentRight="true">
+
+                            <ImageView
+                                android:id="@+id/ivPhotoSub"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"/>
+
+                            <TextView
+                                android:id="@+id/tvPhotoSubNum"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:background="@drawable/scrim_solid"
+                                android:gravity="center"
+                                android:text="+2"
+                                android:textColor="@color/alphawhite_50"
+                                android:textSize="16dip"
+                                android:textStyle="bold"/>
+
+                        </RelativeLayout>
+
+
+                        <RelativeLayout
+                            android:id="@+id/roEmpty"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/white"
+                            android:visibility="gone">
+
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="160dip"
+                                android:background="@drawable/scrim_solid"/>
+
+                            <TextView
+                                android:id="@+id/tvEmpty"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerInParent="true"
+                                android:text="@string/tab_to_add_opposite"
+                                android:textColor="@color/white"
+                                android:textSize="@dimen/md_24sp"/>
+                        </RelativeLayout>
+
+                    </RelativeLayout>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
 
-                    <ImageView
-                        android:id="@+id/ivPhotoMain"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dip"/>
+                    <EditText
+                        android:id="@+id/etContent"
+                        style="@style/EditText.Comment"
+                        />
 
-
-                    <TextView
-                        android:id="@+id/tvPhotoMainEmpty"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dip"
-                        android:text="@string/tab_to_add_opposite"/>
-
-                    <RelativeLayout
-                        android:layout_width="80dip"
-                        android:layout_height="80dip"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentRight="true">
-
-                        <ImageView
-                            android:id="@+id/ivPhotoSub"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"/>
-
-                        <TextView
-                            android:id="@+id/tvPhotoSubNum"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="@drawable/scrim_solid"
-                            android:gravity="center"
-                            android:text="+2"
-                            android:textColor="@color/alphawhite_50"
-                            android:textSize="16dip"
-                            android:textStyle="bold"/>
-
-                    </RelativeLayout>
-
-
-                    <RelativeLayout
-                        android:id="@+id/roEmpty"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white"
-                        android:visibility="gone">
-
-                        <View
-                            android:layout_width="match_parent"
-                            android:layout_height="160dip"
-                            android:background="@drawable/scrim_solid"/>
-
-                        <TextView
-                            android:id="@+id/tvEmpty"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerInParent="true"
-                            android:text="@string/tab_to_add_opposite"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/md_24sp"/>
-                    </RelativeLayout>
-
-                </RelativeLayout>
-
-
-            </LinearLayout>
-
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                            xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                            android:layout_width="match_parent"
-                                            android:layout_height="wrap_content"
-                                            android:orientation="vertical"
-                                            card_view:cardElevation="4dp"
-                                            card_view:cardUseCompatPadding="true">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-
-                <EditText
-                    android:id="@+id/etContent"
-                    style="@style/EditText.NewOQItemPhotoContent"
-                    />
-
+                </LinearLayout>
             </LinearLayout>
 
 
         </android.support.v7.widget.CardView>
 
 
-        <include
-            android:id="@+id/tv_done"
-            layout="@layout/tv_done"
+        <View
             android:layout_width="match_parent"
-            android:layout_height="56dip"/>
+            android:layout_height="0dip"
+            android:layout_weight="1"/>
+
+
+        <TextView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/tv_done"
+            android:layout_width="match_parent"
+            android:layout_height="56dip"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:text="@string/done_korean"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16dip"/>
 
 
     </LinearLayout>
