--- a/app/src/main/res/menu/drawer_activity_main.xml
+++ b/app/src/main/res/menu/drawer_activity_main.xml
@@ -27,10 +27,10 @@
                 android:icon="@drawable/ic_credit_card_black_48dp"
                 android:title="@string/load_sms"/>
 
-            <item
-                android:id="@+id/nav_choose_from_list_get"
-                android:icon="@drawable/ic_view_list_black_48dp"
-                android:title="@string/choose_from_list"/>
+            <!--<item-->
+                <!--android:id="@+id/nav_choose_from_list_get"-->
+                <!--android:icon="@drawable/ic_view_list_black_48dp"-->
+                <!--android:title="@string/choose_from_list"/>-->
             <item
                 android:id="@+id/nav_input_manually_get"
                 android:icon="@drawable/ic_create_black_48dp"
@@ -42,10 +42,10 @@
 
     <item android:title="@string/transaction_i_pay">
         <menu>
-            <item
-                android:id="@+id/nav_choose_from_list_pay"
-                android:icon="@drawable/ic_view_list_black_48dp"
-                android:title="@string/choose_from_list"/>
+            <!--<item-->
+                <!--android:id="@+id/nav_choose_from_list_pay"-->
+                <!--android:icon="@drawable/ic_view_list_black_48dp"-->
+                <!--android:title="@string/choose_from_list"/>-->
             <item
                 android:id="@+id/nav_input_manually_pay"
                 android:icon="@drawable/ic_create_black_48dp"
@@ -62,14 +62,14 @@
                 android:id="@+id/nav_new_group"
                 android:icon="@drawable/ic_group_add_black_48dp"
                 android:title="@string/new_group"/>
-            <item
-                android:id="@+id/nav_list_i_am_master"
-                android:icon="@drawable/ic_view_list_black_48dp"
-                android:title="@string/list_i_am_master"/>
-            <item
-                android:id="@+id/nav_list_i_am_member"
-                android:icon="@drawable/ic_view_list_black_48dp"
-                android:title="@string/list_i_am_member"/>
+            <!--<item-->
+                <!--android:id="@+id/nav_list_i_am_master"-->
+                <!--android:icon="@drawable/ic_view_list_black_48dp"-->
+                <!--android:title="@string/list_i_am_master"/>-->
+            <!--<item-->
+                <!--android:id="@+id/nav_list_i_am_member"-->
+                <!--android:icon="@drawable/ic_view_list_black_48dp"-->
+                <!--android:title="@string/list_i_am_member"/>-->
         </menu>
     </item>
 
@@ -82,6 +82,13 @@
 
     <item android:title="@string/my_account">
         <menu>
+
+
+
+            <item
+                android:id="@+id/nav_account_buy"
+                android:icon="@drawable/ic_store_black_48dp"
+                android:title="@string/account_buy"/>
             <item
                 android:id="@+id/nav_account_setting"
                 android:icon="@drawable/ic_settings_black_48dp"
