--- a/app/src/main/res/layout/lo_avatar_smallnamelargeamount_btns.xml
+++ b/app/src/main/res/layout/lo_avatar_smallnamelargeamount_btns.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_vertical">
@@ -36,14 +37,14 @@
 
             <EditText
                 android:id="@+id/etAmount__lo_avatar_smallnamelargeamount_btns"
-                style="@style/EditText.Ammount.Sub"
+                style="@style/EditText.Comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical|left"
                 android:lines="1"
+                android:layout_margin="0dip"
                 android:text="0"
-                android:textColor="@color/text_black_87"
-                android:textSize="16dip"/>
+                 />
 
         </LinearLayout>
 
