--- a/app/src/main/res/layout/ro_media.xml
+++ b/app/src/main/res/layout/ro_media.xml
@@ -4,38 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <View
-        android:id="@+id/vBackGround__ro_media"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/vbasicalarmbackgroundwithprimarycolor" />
-
     <VideoView
-        android:id="@+id/vvBackGround__ro_media"
+        android:id="@+id/videoViewMedia"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
+        android:visibility="visible"
         />
 
     <ImageView
-        android:id="@+id/ivBackGround__ro_media"
+        android:id="@+id/imageViewMedia"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:visibility="gone" />
-
-    <include
-        android:id="@+id/v_scrim_gradient_bottom__ro_media"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        layout="@layout/v_scrim_gradient_bottom"/>
-
-    <include
-        android:id="@+id/v_scrim_solid__ro_media"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        layout="@layout/v_scrim_solid"/>
+        android:visibility="visible" />
 
 </RelativeLayout>
